<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BG2Yamba</string>
    <string name="menu_settings">Settings</string>
    <string name="titleStatus">Update your status</string>
    <string name="statusHint">Enter your cool, new status!</string>
    <string name="statusUpdateButton">Post</string>
    <string name="statusUpdateFailed">Status update failed</string>
    <string name="statusMaxCharacterLength">140</string>
    <string name="warningZeroCharacter">Please enter text</string>
    <string name="warningExceedCharacterLimit">Status too long</string>
    <string name="summaryUsername">The account username for the Twitter API</string>
    <string name="titleUsername">Username</string>
    <string name="summaryPassword">The account password for the Twitter API</string>
    <string name="titlePassword">Password</string>
    <string name="summaryApiRoot">URL for the Twitter API</string>
    <string name="titleApiRoot">API Root</string>
    <string name="titlePrefs">Preferences</string>
    <string name="titlePurge">Purge Statuses</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeMessage">Welcome!  Please enter your account details to get started.</string>
    <string name="welcomeButton">Start!</string>
    
    <!-- Default Values for the ListView of a Status.  These should all be overwritten
    when the status is retrieved from the DB, and are never expected to display to the user -->
    <string name="defaultStatusCreatedAt">Sometime</string>
    <string name="defaultStatusUser">Someone</string>
    <string name="defaultStatusText">Something</string>
    
    <!-- Store some string keys here that are used by both Java and XML to reference Shared Preferences -->
    <string name="preferenceKeyUsername">username</string>
    <string name="preferenceKeyPassword">password</string>
    <string name="preferenceKeyApiRoot">apiRoot</string>
    
    <!-- Service Start and Stop Menu Options -->
    <string name="titleServiceStart">Start Update Service</string>
    <string name="titleServiceStop">Stop Update Service</string>

    <!-- Timeline -->
    <string name="titleTimeline">Timeline</string>
    
    <string name="comingSoon">Coming soon!</string>
    
</resources>