<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:text="@string/welcomeMessage" 
        android:id="@+id/welcomeMessage"/>
    
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/titleUsername"
        android:id="@+id/usernameText" />
    
    <EditText
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/titlePassword"
        android:id="@+id/passwordText" />
    
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/titleApiRoot"
        android:id="@+id/apiRootText" />
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeButton"
        android:textSize="25sp"
        android:id="@+id/welcomeButton"/>

</LinearLayout>